# google-classic

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Makefile  ROADMAP.md  build-cuda.bat  build-windows.bat  package-lock.json  package.json
.claude/: settings.local.json
google-classic/: froogle.html  image-results.html  index.html  news.html  preferences.html  script.js  search.html  style.css  toolbar.html
include/: cuda_ops.h  holo.h
include/holo/: ai.h  format.h  net.h  pal.h
malgoro-core/: .gitignore  LICENSE  README.md  SETUP.md
malgoro-themes/: .gitignore  LICENSE  README.md
noafk/: CMakeLists.txt  Makefile  README.md  build.bat  build.sh  build_mingw.bat
noafk/.claude/: settings.local.json
noafk/src/: NoAFK.manifest  antiafk.cpp  antiafk.h  main.cpp  resource.h  resource.rc  settings.cpp  settings.h
noafk/tools/: generate_icons.py
repos/Project1/Project1/: Project1.vcxproj
src/: commands.c  holo.c  main.c
src/ai/: cuda_ops.cu  engine.c  gguf.c  gguf.h  llm.c  llm.h  llm_cuda.c  quant.c  quant.h  tensor.c  tensor.h
src/net/: http.c
src/output/: format.c
src/pal/: pal_common.c  pal_unix.c  pal_windows.c
website/gamepage/: index.html  play.html  settings.html
website/gamepage/css/: player.css  settings.css  style.css
website/gamepage/js/: games-data.js  main.js  player.js  settings.js
website/google-classic/: about.html  advanced.html  directory.html  groups.html  images.html  index.html  language.html  more.html  search.html
